[gd_scene load_steps=14 format=3 uid="uid://c8pdq16flajfm"]

[ext_resource type="Script" path="res://scenes/GameScene/Levels/Level2/Level2.gd" id="1_hpqi2"]
[ext_resource type="AudioStream" uid="uid://cru26ikrq7oje" path="res://assets/music/jungleseducktion.wav" id="2_wcwmy"]
[ext_resource type="PackedScene" uid="uid://csfw25lac81x1" path="res://entities/Player/player.tscn" id="3_3j167"]
[ext_resource type="PackedScene" uid="uid://cjbftd2fi2yxu" path="res://entities/Cultist/Basic/cultist_basic.tscn" id="4_iv4d0"]
[ext_resource type="Script" path="res://scenes/GameScene/Levels/Level2/Zone1.gd" id="5_gxs2s"]
[ext_resource type="PackedScene" uid="uid://cgt8gg4u2b5yq" path="res://entities/Pickup/health_pickup.tscn" id="6_ay8dx"]
[ext_resource type="Script" path="res://scenes/GameScene/Levels/Level2/Zone2.gd" id="8_rsn4u"]
[ext_resource type="PackedScene" uid="uid://btuf5s7dicvbh" path="res://entities/Cultist/Projectile/cultist_projectile.tscn" id="9_3f54d"]
[ext_resource type="Script" path="res://scenes/GameScene/Levels/Level2/BossZone.gd" id="9_jvp7c"]
[ext_resource type="Texture2D" uid="uid://d1udka0wy0nh8" path="res://assets/images/maps/level2/forest_ALL.png" id="10_vnawp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6khwk"]
size = Vector2(979, 219)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p77h1"]
size = Vector2(979, 219)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3orr7"]
size = Vector2(5118, 502)

[node name="Level2" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_hpqi2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wcwmy")
volume_db = -4.0
autoplay = true

[node name="Player" parent="." instance=ExtResource("3_3j167")]
y_sort_enabled = true
position = Vector2(232, 280)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.2, 1.2)
limit_left = 0
limit_top = -360
limit_right = 5120
limit_bottom = 360
position_smoothing_enabled = true
editor_draw_limits = true

[node name="CultistProjectile" parent="." instance=ExtResource("9_3f54d")]
position = Vector2(512, 280)

[node name="Zone1" type="Area2D" parent="."]
y_sort_enabled = true
position = Vector2(1500, 3)
script = ExtResource("5_gxs2s")

[node name="ZoneArea" type="CollisionShape2D" parent="Zone1"]
position = Vector2(100, 249)
shape = SubResource("RectangleShape2D_6khwk")

[node name="EnemySpawn" type="Marker2D" parent="Zone1"]
position = Vector2(380, 253)

[node name="EnemySpawn2" type="Marker2D" parent="Zone1"]
position = Vector2(-540, 245)

[node name="EnemySpawn3" type="Marker2D" parent="Zone1"]
position = Vector2(-300, 253)

[node name="EnemySpawn4" type="Marker2D" parent="Zone1"]
position = Vector2(20, 245)

[node name="EnemySpawn5" type="Marker2D" parent="Zone1"]
position = Vector2(700, 237)

[node name="EnemyHolder" type="Node2D" parent="Zone1"]
y_sort_enabled = true
position = Vector2(12, 45)

[node name="CultistBasic" parent="Zone1/EnemyHolder" instance=ExtResource("4_iv4d0")]
y_sort_enabled = true
position = Vector2(272, 216)

[node name="CultistBasic2" parent="Zone1/EnemyHolder" instance=ExtResource("4_iv4d0")]
position = Vector2(-88, 208)

[node name="HealthPickup" parent="." instance=ExtResource("6_ay8dx")]
position = Vector2(2352, 288)

[node name="Zone2" type="Area2D" parent="."]
y_sort_enabled = true
position = Vector2(2984, 3)
script = ExtResource("8_rsn4u")

[node name="ZoneArea" type="CollisionShape2D" parent="Zone2"]
position = Vector2(100, 249)
shape = SubResource("RectangleShape2D_6khwk")

[node name="EnemySpawn" type="Marker2D" parent="Zone2"]
position = Vector2(-240, 237)

[node name="EnemySpawn2" type="Marker2D" parent="Zone2"]
position = Vector2(-520, 261)

[node name="EnemySpawn3" type="Marker2D" parent="Zone2"]
position = Vector2(464, 261)

[node name="EnemySpawn4" type="Marker2D" parent="Zone2"]
position = Vector2(680, 261)

[node name="EnemySpawn5" type="Marker2D" parent="Zone2"]
position = Vector2(184, 253)

[node name="EnemyHolder" type="Node2D" parent="Zone2"]
y_sort_enabled = true
position = Vector2(0, -3)

[node name="HealthPickup2" parent="." instance=ExtResource("6_ay8dx")]
position = Vector2(3712, 296)

[node name="HealthPickup3" parent="." instance=ExtResource("6_ay8dx")]
position = Vector2(3952, 296)

[node name="BossZone" type="Area2D" parent="."]
y_sort_enabled = true
position = Vector2(4600, 0)
script = ExtResource("9_jvp7c")

[node name="ZoneArea" type="CollisionShape2D" parent="BossZone"]
position = Vector2(-46, 250.5)
shape = SubResource("RectangleShape2D_p77h1")

[node name="EnemySpawn" type="Marker2D" parent="BossZone"]
position = Vector2(-736, 200)

[node name="EnemySpawn2" type="Marker2D" parent="BossZone"]
position = Vector2(-416, 208)

[node name="EnemySpawn3" type="Marker2D" parent="BossZone"]
position = Vector2(376, 192)

[node name="EnemySpawn4" type="Marker2D" parent="BossZone"]
position = Vector2(248, 200)

[node name="EnemySpawn5" type="Marker2D" parent="BossZone"]
position = Vector2(496, 256)

[node name="EnemyHolder" type="Node2D" parent="BossZone"]
y_sort_enabled = true
position = Vector2(-24, 136)

[node name="Background" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Background"]
position = Vector2(-156, 0)
texture = ExtResource("10_vnawp")
offset = Vector2(640, 0)
metadata/_edit_group_ = true

[node name="Sprite2D2" type="Sprite2D" parent="Background"]
position = Vector2(1268, 0)
texture = ExtResource("10_vnawp")
offset = Vector2(640, 0)

[node name="Sprite2D3" type="Sprite2D" parent="Background"]
position = Vector2(2692, 0)
texture = ExtResource("10_vnawp")
offset = Vector2(640, 0)

[node name="Sprite2D4" type="Sprite2D" parent="Background"]
position = Vector2(4124, 0)
texture = ExtResource("10_vnawp")
offset = Vector2(640, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background"]
visible = false
position = Vector2(2561, -108)
shape = SubResource("RectangleShape2D_3orr7")
debug_color = Color(0.92899, 3.05149e-05, 0.6625, 0.42)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Background"]
visible = false
polygon = PackedVector2Array(0, 144, -1, 360, 5120, 360, 5120, 144, 5171, 163, 5171, 401, -53, 392, -47, 141)

[node name="Polygon2D" type="Polygon2D" parent="Background"]
visible = false
position = Vector2(5080, 240)
color = Color(0, 0.82, 0.0273333, 1)
polygon = PackedVector2Array(-40, -96, -40, 112, 40, 112, 40, -96)

[connection signal="body_entered" from="Zone1" to="Zone1" method="_on_body_entered"]
[connection signal="body_exited" from="Zone1" to="Zone1" method="_on_body_exited"]
[connection signal="body_entered" from="Zone2" to="Zone2" method="_on_body_entered"]
[connection signal="body_exited" from="Zone2" to="Zone2" method="_on_body_exited"]
[connection signal="body_entered" from="BossZone" to="BossZone" method="_on_body_entered"]
[connection signal="body_exited" from="BossZone" to="BossZone" method="_on_body_exited"]
